src/clr-addons/view-edit-section/view-edit-section.scss
@use '../mixins';
@use '../components.variables.clr-addons' as variables;

@include mixins.exports('view-edit-section.clr-addons') {
  .view-edit-section {
    max-width: variables.$clr-max-width;

    .card-block {
      display: flex;
      flex-direction: column;
    }

    .card-title {
      margin-bottom: 0;
    }

    .card-text {
      padding-right: 10px;
    }

    form,
    .form {
      padding: 0;
    }

    .button-bar {
      margin-top: 1rem;
    }

    .card-block .btn,
    .card-block .btn.btn-link,
    .card-block .card-link,
    .card-footer .btn,
    .card-footer .btn.btn-link,
    .card-footer .card-link {
      margin: 0 0.6rem 0 0;
    }
  }

  .ces-caret-icon {
    color: var(--clr-icon-color);
  }

  .ves-action,
  .card-action {
    margin-right: 0 !important;
    padding-right: 0 !important;
  }

  .ves-actions,
  .card-actions {
    float: right;
    margin-top: -0.3em;
  }
}

